--- a/app/src/main/res/layout/activity_flashcard_translation.xml
+++ b/app/src/main/res/layout/activity_flashcard_translation.xml
@@ -51,7 +51,7 @@
                 android:backgroundTint="#124970"
                 android:translationX="50dp"
                 app:cardCornerRadius="20dp"
-                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+                app:layout_constraintBottom_toTopOf="@+id/addSummaryContentScrollView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/summaryTextView">
