--- a/app/src/main/res/layout/activity_display_summary_content.xml
+++ b/app/src/main/res/layout/activity_display_summary_content.xml
@@ -44,13 +44,13 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintBottom_toTopOf="@+id/addSummaryContentScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/addSummaryContentScrollView"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginTop="76dp"
@@ -84,7 +84,7 @@
         android:layout_marginBottom="23dp"
         android:backgroundTint="#124970"
         app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintBottom_toTopOf="@+id/addSummaryContentScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/summaryTextView">
