--- a/app/src/main/res/layout/activity_summary_page.xml
+++ b/app/src/main/res/layout/activity_summary_page.xml
@@ -104,7 +104,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/summarySearchEditText"
+                android:id="@+id/finderEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
