--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -145,13 +145,17 @@
             android:layout_height="match_parent">
 
             <ListView
-                android:layout_width="152dp"
-                android:layout_height="61dp"
+                android:id="@+id/activeRecallListView"
+                android:layout_width="match_parent"
+                android:layout_height="76dp"
                 android:scrollbarSize="4dp"
+                android:textSize="100sp"
+                android:background="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/todaysDayTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/todaysDayTextView"
+                tools:ignore="SmallSp" />
 
             <TextView
                 android:id="@+id/todaysDayTextView"
@@ -162,6 +166,9 @@
                 android:layout_marginEnd="44dp"
                 android:fontFamily="@font/manrope_extrabold"
                 android:text="TextView"
+                android:textColorHighlight="#000000"
+                android:textColorHint="#000000"
+                android:textColorLink="#000000"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
