--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#414C6B"
+    android:foregroundTint="#0000FF"
     tools:context=".HomePage">
 
     <!-- APP NAME TITLE -->
@@ -136,6 +137,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="23dp"
         android:layout_marginBottom="229dp"
+        android:backgroundTint="#FFFFFF"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toTopOf="@+id/addFileButton"
         app:layout_constraintStart_toStartOf="parent">
@@ -148,13 +150,14 @@
                 android:id="@+id/activeRecallListView"
                 android:layout_width="match_parent"
                 android:layout_height="76dp"
+                android:background="@null"
                 android:scrollbarSize="4dp"
                 android:textSize="100sp"
-                android:background="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/todaysDayTextView"
+                android:divider="#00000000"
                 tools:ignore="SmallSp" />
 
             <TextView
@@ -164,12 +167,13 @@
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="44dp"
-                android:fontFamily="@font/manrope_extrabold"
+                android:fontFamily="@font/concert_one"
                 android:text="TextView"
+                android:textColor="#000000"
                 android:textColorHighlight="#000000"
                 android:textColorHint="#000000"
                 android:textColorLink="#000000"
-                android:textSize="30sp"
+                android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
