--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -133,14 +133,19 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/forgettingCurveWidgetCardView"
-        android:layout_width="150dp"
+        android:layout_width="350dp"
         android:layout_height="150dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginBottom="229dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:alpha="0"
         android:backgroundTint="#FFFFFF"
+        android:foregroundGravity="top|center"
+        android:padding="2dp"
         app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/addFileButton"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBarCard">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -151,23 +156,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="76dp"
                 android:background="@null"
+                android:divider="#00000000"
                 android:scrollbarSize="4dp"
                 android:textSize="100sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/todaysDayTextView"
-                android:divider="#00000000"
                 tools:ignore="SmallSp" />
 
             <TextView
                 android:id="@+id/todaysDayTextView"
-                android:layout_width="92dp"
-                android:layout_height="41dp"
-                android:layout_marginStart="14dp"
+                android:layout_width="320dp"
+                android:layout_height="44dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="44dp"
+                android:layout_marginEnd="14dp"
                 android:fontFamily="@font/concert_one"
+                android:foregroundGravity="top|left"
+                android:gravity="left"
                 android:text="TextView"
                 android:textColor="#000000"
                 android:textColorHighlight="#000000"
