--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -133,15 +133,16 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/forgettingCurveWidgetCardView"
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:alpha="0"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="220dp"
+        android:alpha="1"
         android:backgroundTint="#FFFFFF"
         android:foregroundGravity="top|center"
         android:padding="2dp"
+        app:cardBackgroundColor="#EAE8E0"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,11 +168,11 @@
 
             <TextView
                 android:id="@+id/todaysDayTextView"
-                android:layout_width="320dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="16dp"
+                android:layout_width="145dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="14dp"
+                android:layout_marginEnd="7dp"
                 android:fontFamily="@font/concert_one"
                 android:foregroundGravity="top|left"
                 android:gravity="left"
