--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -80,6 +80,63 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/_dynamic" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/forgettingCurveWidgetCardView"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="235dp"
+        android:alpha="1"
+        android:backgroundTint="#FFFFFF"
+        android:foregroundGravity="top|center"
+        android:padding="2dp"
+        app:cardBackgroundColor="#EAE8E0"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/homeTextView">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/activeRecallListView"
+                android:layout_width="match_parent"
+                android:layout_height="76dp"
+                android:background="@null"
+                android:divider="#00000000"
+                android:scrollbarSize="4dp"
+                android:textSize="100sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/todaysDayTextView"
+                tools:ignore="SmallSp" />
+
+            <TextView
+                android:id="@+id/todaysDayTextView"
+                android:layout_width="145dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="7dp"
+                android:fontFamily="@font/concert_one"
+                android:foregroundGravity="top|left"
+                android:gravity="left"
+                android:text="TextView"
+                android:textColor="#000000"
+                android:textColorHighlight="#000000"
+                android:textColorHint="#000000"
+                android:textColorLink="#000000"
+                android:textSize="40sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <!-- // ADD FILE BUTTON -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
