--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -124,7 +124,7 @@
                 android:height="32dp"
                 android:background="@null"
                 android:ems="10"
-                android:hint="Finder"
+                android:hint="QuickNote Search"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.421"
