--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -16,6 +16,64 @@
 
     <!-- HAMBURGER MENU -->
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/recentlyAdded"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="41dp"
+        android:alpha="1"
+        android:backgroundTint="#FFFFFF"
+        android:foregroundGravity="top|center"
+        android:padding="2dp"
+        app:cardBackgroundColor="#EAE8E0"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/forgettingCurveWidgetCardView"
+        app:layout_constraintTop_toBottomOf="@+id/searchBarCard" >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/recentlyAddedListView"
+                android:layout_width="match_parent"
+                android:layout_height="76dp"
+                android:background="@null"
+                android:divider="#00000000"
+                android:scrollbarSize="4dp"
+                android:textSize="100sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/recentlyAddedTextView"
+                tools:ignore="SmallSp" />
+
+            <TextView
+                android:id="@+id/recentlyAddedTextView"
+                android:layout_width="145dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="7dp"
+                android:fontFamily="@font/concert_one"
+                android:foregroundGravity="top|left"
+                android:gravity="left"
+                android:text="Recently
+                Added:"
+                android:textColor="#000000"
+                android:textColorHighlight="#000000"
+                android:textColorHint="#000000"
+                android:textColorLink="#000000"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/appTitle"
         android:layout_width="wrap_content"
