Fixed bug where translation feature only translates the current text, leaving next flashcard qn/ans untranslated (fixed for en-ch translation only. Will replicate for other translations)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="lightGrey">#DCDCDC</color>
     <color name="grey">#9E9E9E</color>
     <color name="bgColor">#414C6B</color>
-
+    <color name="summaryDisplayBgColor">#EAE8E0</color>
 
 </resources>
