--- a/app/src/main/res/layout/activity_flashcard_translation.xml
+++ b/app/src/main/res/layout/activity_flashcard_translation.xml
@@ -17,11 +17,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/flashcardTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="50sp"
                 android:paddingTop="30dp"
-                android:text="Calculus"
+                android:text=""
                 android:textColor="#FFFFFF"
                 android:textSize="30sp"
                 android:textStyle="bold">
@@ -29,6 +30,7 @@
             </TextView>
 
             <ImageView
+                android:id="@+id/flashcardsTranslationBackBtn"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:paddingTop="30dp"
@@ -108,7 +110,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
         <LinearLayout
             android:id="@+id/questionCard"
             android:layout_width="match_parent"
@@ -131,19 +132,15 @@
                 android:textColor="#FFFFFF"
                 android:textSize="35sp"
                 android:textStyle="bold"></TextView>
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/wrongBtn"
@@ -172,10 +169,6 @@
                     android:background="@drawable/correct_btn">
                 </androidx.appcompat.widget.AppCompatButton>
             </RelativeLayout>
-
-
-
-
         </LinearLayout>
 
     </LinearLayout>
