--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -17,6 +17,73 @@
     <!-- HAMBURGER MENU -->
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/storageLimitCard"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginBottom="50dp"
+        android:alpha="1"
+        android:backgroundTint="#EAE8E0"
+        android:foregroundGravity="top|center"
+        android:padding="2dp"
+        app:cardBackgroundColor="#EAE8E0"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/addFileButton"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/storageTextView"
+                android:layout_width="145dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="7dp"
+                android:fontFamily="@font/concert_one"
+                android:foregroundGravity="top|left"
+                android:gravity="left"
+                android:text="Storage:"
+                android:textColor="#000000"
+                android:textColorHighlight="#000000"
+                android:textColorHint="#000000"
+                android:textColorLink="#000000"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ProgressBar
+                android:id="@+id/storageSizeProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="116dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginEnd="22dp"
+                android:layout_marginBottom="41dp"
+                android:progressTint="#BEDE79"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/progressTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="52dp"
+                android:layout_marginBottom="4dp"
+                android:text="TextView"
+                app:layout_constraintBottom_toTopOf="@+id/storageSizeProgressBar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/recentlyAdded"
         android:layout_width="160dp"
         android:layout_height="160dp"
@@ -24,14 +91,14 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="41dp"
         android:alpha="1"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#EAE8E0"
         android:foregroundGravity="top|center"
         android:padding="2dp"
         app:cardBackgroundColor="#EAE8E0"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/forgettingCurveWidgetCardView"
-        app:layout_constraintTop_toBottomOf="@+id/searchBarCard" >
+        app:layout_constraintTop_toBottomOf="@+id/searchBarCard">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -198,7 +265,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
         android:alpha="1"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#EAE8E0"
         android:foregroundGravity="top|center"
         android:padding="2dp"
         app:cardBackgroundColor="#EAE8E0"
