Changed the hint from finder to QuickNote Search

--- a/app/src/main/res/drawable/round_back_design.xml
+++ b/app/src/main/res/drawable/round_back_design.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#204060"/>
+    <solid android:color="#414C6B"/>
     <corners android:radius="20dp"/>
 </shape>
