--- a/app/src/main/res/layout/activity_languages_set_page.xml
+++ b/app/src/main/res/layout/activity_languages_set_page.xml
@@ -45,7 +45,7 @@
             android:paddingLeft="15sp"
             android:paddingTop="10dp"
             android:text="Select languages for translation"
-            android:textColor="#FFFF00"
+            android:textColor="#FFE45C"
             android:textSize="15sp"
             android:textStyle="bold">
         </TextView>
