--- a/app/src/main/res/layout/activity_summary_card.xml
+++ b/app/src/main/res/layout/activity_summary_card.xml
@@ -14,7 +14,7 @@
         android:layout_height="68dp"
         android:layout_gravity="center_horizontal"
         android:background="#EAE8E0"
-        app:cardBackgroundColor="#EAE8E0"
+        app:cardBackgroundColor="#ffffff"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/space"
         app:layout_constraintEnd_toEndOf="parent"
