--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#414C6B</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightGrey">#DCDCDC</color>
-    <color name="grey">#9E9E9E</color>
+    <color name="lightGrey">#FFD700</color>
+    <color name="grey">#FFD700</color>
     <color name="bgColor">#414C6B</color>
     <color name="summaryDisplayBgColor">#EAE8E0</color>
 
