--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -148,7 +148,7 @@
         android:width="270dp"
         android:height="57dp"
         android:fontFamily="@font/manrope_extrabold"
-        android:text="@string/app_name"
+        android:text="Notegenie"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
